syntax = "proto3";
package pylons.pylons;

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

message GoogleInAppPurchaseOrder {
  string creator = 1;
  string product_id = 2;
  string purchase_token = 3;
  string receipt_data_base64 = 4;
  string signature = 5;
}